--- a/package.json
+++ b/package.json
@@ -8,14 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
-    "react-art": "^16.13.1",
     "react-device-frames": "^1.0.0",
-    "react-dom": "^16.13.1",
-    "react-native": "^0.63.3",
-    "react-native-router": "^0.2.1",
-    "react-native-web": "^0.13.14",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.0"
+    "react-dom": "^16.13.0",
+    "react-scripts": "3.4.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
