--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
+    "react-cookies": "^0.1.1",
     "react-device-frames": "^1.0.0",
     "react-dom": "^16.13.0",
     "react-hook-form": "^6.11.0",
