--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.13.0",
     "react-hook-form": "^6.11.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "sass": "^1.70.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "npm:sass@^1.70.0"
   }
 }
